--- a/foundry.toml
+++ b/foundry.toml
@@ -11,6 +11,7 @@ via_ir = false
 verbosity = 3
 fuzz_runs = 1000
 ffi = false
+fs_permissions = [{ access = "read-write", path = "./deployments" }]
 
 # Formatting
 line_length = 100
